# rustice

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  SECURITY.md
ai/: README.md  code-index.md
crates/api-snowflake-rest/: AGENTS.md  Cargo.toml  README.md
crates/api-snowflake-rest/src/: models.rs
crates/api-snowflake-rest/src/server/: core_state.rs  error.rs  handlers.rs  layer.rs  logic.rs  router.rs  server_models.rs  state.rs
crates/api-snowflake-rest/src/tests/: client.rs  create_test_server.rs  mod.rs  sql_test_macro.rs  test_gzip_encoding.rs  test_rest_api.rs  test_stress.rs
crates/api-snowflake-rest/src/tests/snapshots/compatible/: alter_missing_table.snap.new  alter_table_schema_missing.snap.new  create_table_missing_schema.snap.new
crates/catalog/: AGENTS.md  Cargo.toml  README.md
crates/catalog-metastore/: AGENTS.md  Cargo.toml  README.md
crates/catalog-metastore/src/: metastore.rs  metastore_bootstrap_config.rs
crates/catalog-metastore/src/models/: volumes.rs
crates/catalog/src/: catalog.rs  catalog_list.rs  dev_catalog.rs  df_error.rs  error.rs  lib.rs  rest_catalog_config.rs  schema.rs  table.rs
crates/catalog/src/catalogs/embucket/: catalog.rs  iceberg_catalog.rs  schema.rs
crates/catalog/src/catalogs/rest/: catalog.rs
crates/catalog/src/tests/: information_schema.rs
crates/catalog/src/tests/snapshots/: information_schema_df_settings.snap  information_schema_parameters.snap  information_schema_routines.snap
crates/embucket-lambda/: Cargo.toml  README.md
crates/embucket-lambda/src/: config.rs  main.rs
crates/embucketd/: AGENTS.md  Cargo.toml  README.md
crates/embucketd/src/: cli.rs  main.rs
crates/executor/: AGENTS.md  Cargo.toml  README.md
crates/executor/src/: error.rs  error_code.rs  lib.rs  models.rs  query.rs  query_task_result.rs  query_types.rs  running_queries.rs  service.rs  session.rs  snowflake_error.rs  test_helpers.rs  utils.rs
crates/executor/src/datafusion/: type_planner.rs
crates/executor/src/datafusion/physical_optimizer/: case_insensitive_schema.rs  eliminate_empty_datasource_exec.rs  mod.rs  remove_exec_above_empty.rs  row_number_topk.rs
crates/executor/src/datafusion/physical_plan/: grouped_topk.rs  merge.rs  mod.rs
crates/executor/src/datafusion/rewriters/: session_context.rs
crates/executor/src/tests/: mod.rs  query.rs  service.rs  statestore_queries_unittest.rs
crates/executor/src/tests/s3_tables/: query.rs
crates/executor/src/tests/sql/ddl/: database.rs  merge_into.rs  table.rs  volume.rs
crates/executor/src/tests/sql/functions/session/: funcs.rs
crates/executor/src/tests/sql/physical_optimizer/: mod.rs  row_number_topk.rs
crates/sqllogictest/: AGENTS.md  Cargo.toml  README.md
crates/sqllogictest/dev/: regen-snowplow-setup.sh  regen-snowplow-slt.sh  sync-slt.sh
crates/sqllogictest/src/: conversion.rs  engine.rs  error.rs  lib.rs  normalize.rs  output.rs  preprocessor.rs
crates/sqllogictest/tests/: sqllogictests.rs
crates/sqllogictest/tests/fixtures/snowplow/: README.md  events.tsv  events1.parquet  events2.parquet  setup.full_refresh.slt  setup.header.slt  setup.slt
crates/sqllogictest/tests/slt/bronze_scope/data-types/: binary.slt  boolean.slt  datetime.slt  float.slt  number.slt  string.slt  structured.slt  variant.slt
crates/sqllogictest/tests/slt/bronze_scope/other/: aliases.slt
crates/sqllogictest/tests/slt/bronze_scope/sql-reference-commands/General_DML/: insert.slt  merge.slt
crates/sqllogictest/tests/slt/bronze_scope/sql-reference-commands/Query_operators/: operators-arithmetic.slt  operators-logical.slt  operators-query.slt
crates/sqllogictest/tests/slt/bronze_scope/sql-reference-commands/Query_syntax/: connect-by.slt  from.slt  group-by-grouping-sets.slt  group-by.slt  having.slt  join-lateral.slt  join.slt  limit.slt  order-by.slt  pivot.slt  qualify.slt  select.slt  top_n.slt  unpivot.slt  where.slt  with.slt
crates/sqllogictest/tests/slt/bronze_scope/sql-reference-commands/Sessions/: set.slt
crates/sqllogictest/tests/slt/bronze_scope/sql-reference-functions/Conditional_expression/: in.slt
crates/sqllogictest/tests/slt/bronze_scope/sql-reference-functions/Date_&_time/: convert_timezone.slt  dayofweek.slt  time_from_parts.slt  time_slice.slt  timeadd.slt  to_timestamp.slt  week.slt  weekiso.slt  weekofyear.slt  year.slt  yearofweek.slt
crates/sqllogictest/tests/slt/bronze_scope/sql-reference-functions/Encryption/: encrypt_raw.slt
crates/sqllogictest/tests/slt/dbt_snowplow_web/full_refresh/: snowplow_web_base_events_this_run.slt  snowplow_web_base_new_event_limits.slt  snowplow_web_base_quarantined_sessions.slt  snowplow_web_base_sessions_lifecycle_manifest.slt  snowplow_web_base_sessions_this_run.slt  snowplow_web_incremental_manifest.slt  snowplow_web_page_views.slt  snowplow_web_page_views_this_run.slt  snowplow_web_pv_engaged_time.slt  snowplow_web_pv_scroll_depth.slt  snowplow_web_sessions.slt  snowplow_web_sessions_this_run.slt  snowplow_web_user_mapping.slt  snowplow_web_users.slt  snowplow_web_users_aggs.slt  snowplow_web_users_lasts.slt  snowplow_web_users_sessions_this_run.slt  snowplow_web_users_this_run.slt
crates/sqllogictest/tests/slt/dbt_snowplow_web/incremental/: snowplow_web_base_events_this_run.slt  snowplow_web_base_new_event_limits.slt  snowplow_web_base_quarantined_sessions.slt  snowplow_web_base_sessions_lifecycle_manifest.slt  snowplow_web_base_sessions_this_run.slt  snowplow_web_incremental_manifest.slt  snowplow_web_page_views.slt  snowplow_web_page_views_this_run.slt  snowplow_web_pv_engaged_time.slt  snowplow_web_pv_scroll_depth.slt  snowplow_web_sessions.slt  snowplow_web_sessions_this_run.slt  snowplow_web_user_mapping.slt  snowplow_web_users.slt  snowplow_web_users_aggs.slt  snowplow_web_users_lasts.slt  snowplow_web_users_sessions_this_run.slt  snowplow_web_users_this_run.slt
crates/sqllogictest/tests/slt/snowplow_ddl/: README.md  copy_into_parquet.slt  create_or_replace_table.slt  create_schema_idempotent.slt  create_table_as_then_insert.slt  drop_then_create.slt  merge_upsert.slt
(+144 files in other folders)
