[workspace]
default-members = ["crates/embucketd"]
members = [
  "crates/embucketd",
  "crates/api-snowflake-rest",
  "crates/api-snowflake-rest-sessions",
  "crates/executor",
  "crates/catalog-metastore",
  "crates/catalog",
  "crates/functions",
  "crates/queries",
  "crates/error-stack",
  "crates/error-stack-trace",
  "crates/embucket-lambda",
  "crates/build-info",
  "crates/sqllogictest",
]
resolver = "2"
package.license-file = "LICENSE"

[profile.test]
incremental = true
opt-level = 1
debug = true
codegen-units = 16

[profile.ci]
inherits = "test"
lto = "off"
debug = false

[workspace.dependencies]
queries = { path = "crates/queries" }
async-trait = { version = "0.1.84" }
aws-config = { version = "1.5.17" }
aws-sdk-dynamodb = { version = "1.100.0" }
aws-credential-types = { version = "1.2.11",  features = ["hardcoded-credentials"]}
axum = { version = "0.8.1", features = ["multipart", "macros"] }
axum-macros = "0.5"
bytes = { version = "1.8.0" }
chrono = { version = "0.4.41", default-features = false, features = ["serde",  "clock"] }
clap = { version = "4.5.27", features = ["env", "derive"] }
dashmap = "6.1.0"
datafusion = { version = "53.0.0" }
datafusion-common = { version = "53.0.0" }
datafusion-doc = { version = "53.0.0" }
datafusion-expr = { version = "53.0.0" }
datafusion-functions-json = { git = "https://github.com/Embucket/datafusion-functions-json.git", rev = "96050386c6ab9215e49967cac94111517a6efc27" }
datafusion-macros = { version = "53.0.0" }
datafusion-physical-plan = { version = "53.0.0" }
datafusion_iceberg = { git = "https://github.com/Embucket/iceberg-rust.git", rev = "45b92f94f6e184e27c4a1ee2f6e370e1a3ee56a8" }
futures = { version = "0.3" }
http = "1.2"
http-body-util = "0.1.0"
iceberg = { git = "https://github.com/apache/iceberg-rust.git", rev="7a5ad1fcaf00d4638857812bab788105f6c60573"}
iceberg-rest-catalog = { git = "https://github.com/Embucket/iceberg-rust.git", rev = "45b92f94f6e184e27c4a1ee2f6e370e1a3ee56a8" }
iceberg-rust = { git = "https://github.com/Embucket/iceberg-rust.git", rev = "45b92f94f6e184e27c4a1ee2f6e370e1a3ee56a8" }
iceberg-file-catalog = { git = "https://github.com/Embucket/iceberg-rust.git", rev = "45b92f94f6e184e27c4a1ee2f6e370e1a3ee56a8" }
iceberg-rust-spec = { git = "https://github.com/Embucket/iceberg-rust.git", rev = "45b92f94f6e184e27c4a1ee2f6e370e1a3ee56a8" }
iceberg-sql-catalog = { git = "https://github.com/Embucket/iceberg-rust.git", rev = "45b92f94f6e184e27c4a1ee2f6e370e1a3ee56a8" }
indexmap = "2.7.1"
jsonwebtoken = "9.3.1"
lazy_static = { version = "1.5" }
# Should be updated to 0.12.0 after slate db update
object_store = { version = "0.13.1", features = ["aws", "gcp", "azure"] }
regex = "1.11.1"
serde = { version = "1.0.228", features = ["derive", "alloc"] }
serde_json = { version = "1.0.145", features = ["raw_value"]}
serde_yaml = "0.9"
serde_dynamo = { version = "4.3.0", features = ["aws-sdk-dynamodb+1"] }
snafu = { version = "0.8.5", features = ["futures"] }
tikv-jemallocator = { version = "0.6.0" }
strum = { version = "0.27.2", features = ["derive"] }
strum_macros = { version = "0.27.2" }
tar = "0.4.44"
tempfile = { version = "3" }
time = "0.3.37"
tokio-util = "0.7.16"
tokio = { version = "1", features = ["full", "tracing"] }
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.2", features = [
  "catch-panic",
  "timeout",
  "sensitive-headers",
  "cors",
  "trace",
  "compression-full",
  "decompression-full"
] }
tower-sessions = { version = "0.15.0" }
tracing = { version = "0.1", features = ["attributes"] }
tracing-attributes = { version = "0.1.28" }
url = "2.5"
utoipa = { version = "5.3.1", features = ["uuid", "chrono"] }
utoipa-axum = { version = "0.2.0" }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
uuid = { version = "1.10.0", features = ["v4", "v7", "serde"] }
validator = { version = "0.20.0", features = ["derive"] }
mockall = "0.14.0"
insta = { version = "1.44.1", features = ["json", "filters", "redactions"] }
cfg-if = { version = "1.0.3" }

[patch.crates-io]
datafusion = { git = "https://github.com/Embucket/datafusion.git", rev = "cabef48165992325f9747d97f61fa763522b7bbf" }
datafusion-common = { git = "https://github.com/Embucket/datafusion.git", rev = "cabef48165992325f9747d97f61fa763522b7bbf" }
datafusion-expr = { git = "https://github.com/Embucket/datafusion.git", rev = "cabef48165992325f9747d97f61fa763522b7bbf" }
datafusion-physical-plan = { git = "https://github.com/Embucket/datafusion.git", rev = "cabef48165992325f9747d97f61fa763522b7bbf" }
datafusion-doc = { git = "https://github.com/Embucket/datafusion.git", rev = "cabef48165992325f9747d97f61fa763522b7bbf" }
datafusion-macros = { git = "https://github.com/Embucket/datafusion.git", rev = "cabef48165992325f9747d97f61fa763522b7bbf" }

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = 1 }
as_conversions = "warn"
nursery = { level = "warn", priority = 1 }
unwrap_used = "deny"
expect_used = "deny"
print_stdout = "deny"
similar_names = { level = "allow", priority = 2 }

# These should be removed eventually
missing_errors_doc = { level = "allow", priority = 2 }
missing_panics_doc = { level = "allow", priority = 2 }
significant_drop_tightening = { level = "allow", priority = 2 }
module_name_repetitions = { level = "allow", priority = 2 }
option_if_let_else = { level = "allow", priority = 2 }
needless_for_each = { level = "allow", priority = 2 } #  #[derive(OpenApi)]
