[package]
name = "api-snowflake-rest"
version = "0.1.0"
edition = "2024"
license-file.workspace = true

[features]
default = []
retry-disable = []
traces-test-log = []

[dependencies]
api-snowflake-rest-sessions = { path = "../api-snowflake-rest-sessions" }
executor = { path = "../executor" }
catalog-metastore = { path = "../catalog-metastore" }

error-stack-trace = { path = "../error-stack-trace" }
error-stack = { path = "../error-stack" }

tracing-subscriber = { version = "0.3.20", features = ["env-filter", "registry", "fmt", "json"] }

tower-sessions = { workspace = true }
tower-http = { workspace = true }
axum = { workspace = true }
snafu = { workspace = true }
tracing = { workspace = true }
flate2 = { version = "1"}
indexmap = { workspace = true }
base64 = { version = "0.22" }
datafusion = { workspace = true }
tower = { workspace = true }
strum = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
cfg-if = { workspace = true }
jsonwebtoken = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
reqwest = { version = "0.12.14", features = ["json"] }
http = { workspace = true }
futures = { workspace = true }
arrow = "57.0.0"
axum-server = "0.7.2"
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "registry", "fmt", "json"] }
tracing-opentelemetry = { version = "0.32.1" }
tracing-core = { version = "0.1.34"}
opentelemetry-otlp = { version = "0.31.1", features = ["grpc-tonic"] }
opentelemetry_sdk = { version = "0.31.0" }
opentelemetry = { version = "0.31.0" }


[lints]
workspace = true
