[package]
name = "catalog-metastore"
version = "0.1.0"
edition = "2024"
license-file = { workspace = true }

[dependencies]
error-stack-trace = { path = "../error-stack-trace" }
error-stack = { path = "../error-stack" }

async-trait = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
iceberg-rust = { workspace = true }
iceberg-rust-spec = { workspace = true }
object_store = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
snafu = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
utoipa = { workspace = true }
uuid = { workspace = true }
validator = { workspace = true }
regex = { workspace = true }
serde_yaml = { workspace = true }

[dev-dependencies]
insta = { workspace = true }

[lints]
workspace = true
