[package]
name = "catalog"
version = "0.1.0"
edition = "2024"
license-file.workspace = true

[dependencies]
catalog-metastore = { path = "../catalog-metastore" }
functions = { path = "../functions" }
async-trait = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
datafusion = { workspace = true }
datafusion-common = { workspace = true }
datafusion-doc = { workspace = true }
datafusion-expr = { workspace = true }
datafusion-physical-plan = { workspace = true }
datafusion_iceberg = { workspace = true }
futures = { workspace = true }
error-stack-trace = { path = "../error-stack-trace" }
error-stack = { path = "../error-stack" }

iceberg-rust = { workspace = true }
iceberg-rust-spec = { workspace = true }
iceberg-rest-catalog = { workspace = true }
iceberg-file-catalog = { workspace = true }

object_store = { workspace = true }
once_cell = { version = "1.20.2" }
snafu = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
bytes = { workspace = true }
insta = { workspace = true }
paste = "1.0.15"
