[package]
name = "embucket-lambda"
version = "0.1.0"
edition = "2024"
license-file.workspace = true

[dependencies]
api-snowflake-rest = { path = "../api-snowflake-rest" }
api-snowflake-rest-sessions = { path = "../api-snowflake-rest-sessions" }
catalog-metastore = { path = "../catalog-metastore" }
executor = { path = "../executor" }
object_store = { workspace = true }
build-info = { path = "../build-info" }
lambda_http = "0.17"
tokio = { workspace = true }
base64 = "0.22"
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
http = { workspace = true }
http-body-util = "0.1"
serde_urlencoded = "0.7"
axum = { workspace = true }
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
tower = { workspace = true }
tower-http = { workspace = true }
cfg-if = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "registry", "fmt", "json"] }
tracing-opentelemetry = { version = "0.32.1" }
tracing-allocations = { version = "0.1.0", optional = true }
opentelemetry-otlp = { version = "0.31.1", features = ["grpc-tonic"] }
opentelemetry_sdk = { version = "0.31.0" }
opentelemetry = { version = "0.31.0" }
web-time = { version = "1.1.0" }

[lints]
workspace = true

[[bin]]
name = "bootstrap"
path = "src/main.rs"

[features]
default = ["retry-disable"]
retry-disable = ["api-snowflake-rest/retry-disable"]
streaming = []
rest-catalog = ["executor/rest-catalog"]

[package.metadata.lambda]
# Default binary to deploy
default-binary = "bootstrap"

[package.metadata.lambda.deploy]
# Function name: Can be set via CARGO_LAMBDA_FUNCTION_NAME env var
# If not set, falls back to binary name or pass as CLI argument
memory = 3008
timeout = 30
tracing = "Active"
# Note: include path is relative to workspace root
# Must run deploy from workspace root: cargo lambda deploy --binary-name bootstrap
include = ["config/metastore.yaml"]

[package.metadata.lambda.deploy.env]
LOG_FORMAT = "json"
METASTORE_CONFIG = "config/metastore.yaml"
TRACING_LEVEL = "debug"
RUST_LOG = "info"
