[package]
name = "embucketd"
version = "0.1.0"
edition = "2024"
license-file.workspace = true

[dependencies]
queries = { workspace = true, optional = true }
executor = { path = "../executor" }
catalog-metastore = { path = "../catalog-metastore" }
api-snowflake-rest = { path = "../api-snowflake-rest" }
api-snowflake-rest-sessions = { path = "../api-snowflake-rest-sessions" }
build-info = { path = "../build-info" }
axum = { workspace = true }
clap = {  workspace = true }
console-subscriber = { version = "0.4.1" } 
dotenv = "0.15.0"
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "registry", "fmt", "json"] }
tracing-opentelemetry = { version = "0.32.1" }
tracing-allocations = { version = "0.1.0", optional = true }
tracing-core = { version = "0.1.34"}
object_store = { workspace = true }
iceberg-rust = { workspace = true }
opentelemetry-otlp = { version = "0.31.1", features = ["grpc-tonic"] }
opentelemetry_sdk = { version = "0.31.0", features = [
    "experimental_trace_batch_span_processor_with_async_runtime",
    "rt-tokio-current-thread"
    ] } # sending spans in a separate thread
opentelemetry = { version = "0.31.0" }
tikv-jemallocator = { workspace = true }
time = { workspace = true }
tower = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
utoipa = { workspace = true }
utoipa-axum = { workspace = true }
utoipa-swagger-ui = { workspace = true }
strum.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }
snafu = { workspace = true }

[lints]
workspace = true

[features]
default = []
alloc-tracing = ["dep:tracing-allocations"]
queries = ["dep:queries"]
retry-disable = ["api-snowflake-rest/retry-disable"]
rest-catalog = ["executor/rest-catalog"]
dedicated-executor = ["executor/dedicated-executor"]
state-store = ["executor/state-store"]
state-store-persist-session-oncreate = ["executor/state-store-persist-session-oncreate"]
state-store-query = ["executor/state-store-query"]
state-store-query-test = ["executor/state-store-query-test"]


