[package]
name = "executor"
version = "0.1.0"
edition = "2024"
license-file.workspace = true

[features]
default = []
rest-catalog = ["catalog/rest-catalog"]
dedicated-executor = []

# "state-store" feature enables DynamoDB based state-store implementation.
state-store = []

# "state-store-persist-session-oncreate" feature allows to persist empty session record.
# Otherwise it will be persisted only if session has something to persist.
state-store-persist-session-oncreate = ["state-store"]

state-store-query-test = ["state-store-query"]

# "state-store-query" feature depends on state-store feature.
# When enabled - query status will be persisted using "state-store" implementation.
# When not enabled - state-store will not be used by queries and query state will not be persisted.
state-store-query = ["state-store"]

[dependencies]
catalog-metastore = { path = "../catalog-metastore" }
state-store = { path = "../state-store" }
catalog = { path = "../catalog" }
functions = { path = "../functions" } # features = ["geospatial"] 
arrow-schema = { version = "56.1.0", features = ["serde"] }
async-trait = { workspace = true }
aws-config = { workspace = true }
aws-credential-types = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
async-stream = { version = "0.3.6"}
datafusion = { workspace = true }
datafusion-common = { workspace = true }
datafusion-doc = { workspace = true }
datafusion-expr = { workspace = true }
datafusion-functions-json = { workspace = true }
datafusion-physical-plan = { workspace = true }
datafusion_iceberg = { workspace = true }
futures = { workspace = true }
sqlparser = { git = "https://github.com/Embucket/datafusion-sqlparser-rs.git", rev = "46c81692142afa6812d3b3bbe49d3daeb361e895", features = [
  "visitor",
] }
iceberg-rust = { workspace = true }
iceberg-rust-spec = { workspace = true }
iceberg-s3tables-catalog = { workspace = true }
aws-sdk-s3tables = "1.45.0"
error-stack-trace = { path = "../error-stack-trace" }
error-stack = { path = "../error-stack" }

clap = {  workspace = true }
object_store = { workspace = true }
regex = { workspace = true }
snafu = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

strum = { workspace = true }
strum_macros = { workspace = true }
tracing = { workspace = true }
tracing-attributes = { workspace = true }
tokio = { workspace = true }
tokio-stream = "0.1.17"
tokio-util = { workspace = true }

url = { workspace = true }
uuid = { workspace = true }
indexmap = { workspace = true }
time = { workspace = true }
pin-project-lite = "0.2.16"
lru = "0.15.0"

cfg-if = { workspace = true }

[dev-dependencies]
bytes = { workspace = true }
insta = { version = "1.42.0", features = ["yaml", "filters"] }
paste = "1"
dotenv = "0.15.0"
mockall = { workspace= true }

[lints]
workspace = true
